--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "inquirer": "^6.3.1",
-    "node-static": "^0.7.11"
+    "inquirer": "^6.5.2",
+    "node-static": "^0.7.11",
+    "throw": "^1.1.0"
   }
 }
