--- a/package.json
+++ b/package.json
@@ -9,8 +9,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "inquirer": "^6.5.2",
-    "node-static": "^0.7.11",
-    "throw": "^1.1.0"
-  }
+    "fs": "0.0.1-security",
+    "inquirer": "^6.5.2"
+  },
+  "devDependencies": {
+    "jest": "^26.4.2"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/volosevych/README-Generator"
+  },
+  "homepage": ""
 }
